--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My page title</title>
   <meta name="PWA_title" content="PWA_content" />
-  <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="./icons/favicon.ico" type="image/x-icon" />
 
   <link rel="manifest" href="/manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -30,5 +30,6 @@
 
 <!-- Import Material scripts -->
 <script src="https://unpkg.com/material-components-web@3.2.0/dist/material-components-web.min.js"></script>
+<script src="scripts/app.js"></script>
 
 </html>
