--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
         </button>
         <span class="mdc-top-app-bar__title">My page title</span>
       </section>
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+        <button style="display: none" id="InstallButton"
+          class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Install">
+          get_app
+        </button>
+        <button id="ShareBUtton" class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Share">
+          share
+        </button>
+      </section>
     </div>
   </header>
   <div class="main-content">
@@ -68,5 +77,6 @@
 <!-- Import Material scripts -->
 <script src="https://unpkg.com/material-components-web@3.2.0/dist/material-components-web.min.js"></script>
 <script src="scripts/app.js"></script>
+<script src="scripts/install.js"></script>
 
 </html>
