--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Install">
           get_app
         </button>
-        <button id="ShareBUtton" class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Share">
+        <button id="ShareButton" class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Share">
           share
         </button>
       </section>
@@ -76,7 +76,7 @@
 
 <!-- Import Material scripts -->
 <script src="https://unpkg.com/material-components-web@3.2.0/dist/material-components-web.min.js"></script>
-<script src="scripts/app.js"></script>
-<script src="scripts/install.js"></script>
+<script defer src="scripts/app.js"></script>
+<script defer src="scripts/install.js"></script>
 
 </html>
