--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
     </div>
   </header>
   <div class="main-content">
-    <zero-md id="md" manual-render src="readme.md"> </zero-md>
+    <h1>Hello world!</h1>
+    <div id="DataDiv"></div>
   </div>
 </body>
 
 <!-- Import Material scripts -->
-<script src="https://unpkg.com/material-components-web@3.2.0/dist/material-components-web.min.js"></script>
+<script defer src="scripts/material-components-web.min.js"></script>
 <script defer src="scripts/app.js"></script>
 <script defer src="scripts/install.js"></script>
 
