--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </body>
 
 <!-- Import Material scripts -->
-<script defer src="scripts/material-components-web.min.js"></script>
+<script async src="scripts/material-components-web.min.js"></script>
 <script defer src="scripts/app.js"></script>
 <script defer src="scripts/install.js"></script>
 
